Add namespace endpoint, fix status deployment handler, also delete the cluster resources when deleting deployment
